# gml_to_graphml

./: .gitignore  Cargo.toml  README.md
src/: gml_to_gml.rs  gml_to_graphml.rs  graphml_to_gml.rs  lib.rs  main.rs  test_complex.gml  test_simple.gml
src/data/: test_complex.gml  test_complex.graphml  test_simple.gml  test_simple.graphml
tests/: roundtrip.rs
tests/data/: complex.gml  complex.graphml  simple.gml  simple.graphml
