[package]
name = "gml_to_graphml"
version = "0.1.0"
authors = ["Maxime Jacques <maxime@mims.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "*"
itertools = "*"
serde_json = "*"
regex = "*"
tempfile = "*"